Use single leaderboard renderer (worldcup.js); remove worldcup_display.js from homepage

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <script src="scripts/network.js"></script>
     <script src="scripts/tiktok_section.js"></script>
     <script src="scripts/worldcup.js"></script>
-    <script src="scripts/worldcup_display.js"></script>
+    <!-- Removed: worldcup_display.js (duplicate renderer) -->
     <script src="scripts/printify_sync.js"></script>
     <script src="scripts/directory.js"></script>
     
