Add cache-busting version params to force script reload

--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
 
     <!-- Scripts -->
     <script src="scripts/utils/version.js"></script>
-    <script src="scripts/network.js"></script>
-    <script src="scripts/tiktok_section.js"></script>
-    <script src="scripts/worldcup.js"></script>
+    <script src="scripts/network.js?v=2"></script>
+    <script src="scripts/tiktok_section.js?v=2"></script>
+    <script src="scripts/worldcup.js?v=2"></script>
     <!-- Removed: worldcup_display.js (duplicate renderer) -->
-    <script src="scripts/printify_sync.js"></script>
-    <script src="scripts/directory.js"></script>
+    <script src="scripts/printify_sync.js?v=2"></script>
+    <script src="scripts/directory.js?v=2"></script>
     
     <!-- PWA Service Worker Registration -->
     <script>
