Remove 'WatchTheFall' text from navigation bar and fix leaderboard dropdown event binding

--- a/feed.html
+++ b/feed.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,6 @@
         <div class="nav-container">
             <a href="index.html" class="nav-logo">
                 <img src="assets/logos/wtf-logo.png" alt="WatchTheFall">
-                <span>WatchTheFall</span>
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
