Rename worldcup.js to worldcup.v2.js to force cache bust and update script reference in index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
         </div>
     </section>
 
-    <!-- World Cup Leaderboard -->
+    <!-- World Cup Leaderboard v4.3 -->
+    <script src="scripts/worldcup.v2.js"></script>
     <section id="worldcup" class="section worldcup-section">
         <div class="container">
             <h2 class="section-title">World Cup Leaderboard</h2>
@@ -253,7 +254,7 @@
     <script src="scripts/utils/version.js"></script>
     <script src="scripts/network.js?v=2"></script>
     <script src="scripts/tiktok_section.js?v=2"></script>
-    <script src="scripts/worldcup.js?v=2"></script>
+    <script src="scripts/worldcup.v2.js"></script>
     <!-- Removed: worldcup_display.js (duplicate renderer) -->
     <script src="scripts/printify_sync.js?v=2"></script>
     <script src="scripts/directory.js?v=2"></script>
