Add roadmap link to Global section in directory

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                         <a href="#" class="hub-link">Dark Humour</a>
                         <a href="#" class="hub-link">Concepts</a>
                         <a href="watchthefallrecords.html" class="hub-link">WTF Records</a>
+                        <a href="regional/pages/roadmap.html" class="hub-link">Roadmap</a>
                     </div>
                 </div>
             </div>
