Add regional homepage animations and update video backgrounds for Australia, Canada, France, Italy, and Spain pages

--- a/regional/pages/france.html
+++ b/regional/pages/france.html
@@ -33,8 +33,7 @@
     <!-- Cinematic Video Background -->
     <div class="video-background">
         <video id="background-video" autoplay muted loop playsinline preload="auto" poster="../../assets/logos/france-wtf-logo.png">
-            <source src="../../assets/video/main_bg.mp4" type="video/mp4">
-            <source src="../../assets/video/main_bg.mp4" type="video/mp4">
+            <source src="../../assets/video/france-homepage-animation.mp4" type="video/mp4">
         </video>
         <div class="video-overlay france-overlay"></div>
     </div>
