--- a/regional/pages/australia.html
+++ b/regional/pages/australia.html
@@ -33,8 +33,7 @@
     <!-- Cinematic Video Background -->
     <div class="video-background">
         <video id="background-video" autoplay muted loop playsinline preload="auto" poster="../../assets/logos/australia-wtf-logo.png">
-            <source src="../../assets/video/main_bg.mp4" type="video/mp4">
-            <source src="../../assets/video/main_bg.mp4" type="video/mp4">
+            <source src="../../assets/video/australia-homepage-animation.mp4" type="video/mp4">
         </video>
         <div class="video-overlay australia-overlay"></div>
     </div>
