--- a/regional/pages/ireland.html
+++ b/regional/pages/ireland.html
@@ -33,8 +33,7 @@
     <!-- Cinematic Video Background -->
     <div class="video-background">
         <video id="background-video" autoplay muted loop playsinline preload="auto" poster="../../assets/logos/ireland-wtf-logo.png">
-            <source src="../../assets/video/main_bg.mp4" type="video/mp4">
-            <source src="../../assets/video/main_bg.mp4" type="video/mp4">
+            <source src="../../assets/video/ireland_homepage_animation.mp4" type="video/mp4">
         </video>
         <div class="video-overlay ireland-overlay"></div>
     </div>
