Add Spain back to Europe directory

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                         <a href="regional/pages/netherlands.html" class="hub-link">Netherlands</a>
                         <a href="regional/pages/poland.html" class="hub-link">Poland</a>
                         <a href="regional/pages/italy.html" class="hub-link">Italy</a>
+                        <a href="regional/pages/spain.html" class="hub-link">Spain</a>
                         <a href="regional/pages/sweden.html" class="hub-link">Sweden</a>
                     </div>
                 </div>
