--- a/regional/pages/spain.html
+++ b/regional/pages/spain.html
@@ -33,7 +33,7 @@
     <!-- Cinematic Video Background -->
     <div class="video-background">
         <video id="background-video" autoplay muted loop playsinline preload="auto" poster="../../assets/logos/spain-wtf-logo.png">
-            <source src="../../assets/video/main_bg.mp4" type="video/mp4">
+            <source src="../../assets/video/spain-homepage-animation.mp4" type="video/mp4">
         </video>
         <div class="video-overlay spain-overlay"></div>
     </div>
