Replace WTF logo with watermark on all regional pages

--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -1,4 +1,4 @@
-Ôªø<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <!-- Preload critical assets -->
     <link rel="preload" href="../../styles/app.css" as="style">
     <link rel="preload" href="../templates/scotland_colors.css" as="style">
-    <link rel="preload" href="../../assets/logos/wtf-logo.png" as="image">
+    <link rel="preload" href="../../assets/watermark/watchthefall_watermark.png" as="image">
     <link rel="preload" href="../../assets/logos/scotland-wtf-logo.png" as="image">
     
     <!-- DNS prefetch for external resources -->
@@ -65,7 +65,7 @@
             <div class="breadcrumb">
                 <a href="../../feed.html">Directory</a> / <span>Scotland</span>
             </div>
-            <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
+            <img src="../../assets/watermark/watchthefall_watermark.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title scotland-title">
                 <span class="region-logo-block">
                     <img src="../../assets/logos/scotland-wtf-logo.png" alt="Scotland" class="region-flag-logo" loading="eager" />
@@ -73,7 +73,7 @@
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
-            <p class="page-subtitle">Alba Gu Br√†th ‚Äî Documenting the fall in Scotland</p>
+            <p class="page-subtitle">Alba Gu Br‡th ó Documenting the fall in Scotland</p>
             <p class="page-description">Recording Scotland's decline</p>
         </div>
     </section>
@@ -188,7 +188,7 @@
                 <div class="footer-info">
                     <h4>Scotland WTF</h4>
                     <p>Part of WatchTheFall Network</p>
-                    <p>Alba Gu Br√†th</p>
+                    <p>Alba Gu Br‡th</p>
                 </div>
             </div>
             <div class="footer-bottom">
