--- a/regional/pages/usa.html
+++ b/regional/pages/usa.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <!-- Preload critical assets -->
     <link rel="preload" href="../../styles/app.css" as="style">
     <link rel="preload" href="../templates/usa_colors.css" as="style">
-    <link rel="preload" href="../../assets/logos/wtf-logo.png" as="image">
+    <link rel="preload" href="../../assets/watermark/watchthefall_watermark.png" as="image">
     <link rel="preload" href="../../assets/logos/usa-wtf-logo.png" as="image">
     
     <!-- DNS prefetch for external resources -->
@@ -64,7 +64,7 @@
             <div class="breadcrumb">
                 <a href="../../feed.html">Directory</a> / <span>USA</span>
             </div>
-            <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
+            <img src="../../assets/watermark/watchthefall_watermark.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title usa-title">
                 <span class="region-logo-block">
                     <img src="../../assets/logos/usa-wtf-logo.png" alt="USAmerica" class="region-flag-logo" loading="eager" />
