--- a/regional/pages/france.html
+++ b/regional/pages/france.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <!-- Preload critical assets -->
     <link rel="preload" href="../../styles/app.css" as="style">
     <link rel="preload" href="../templates/france_colors.css" as="style">
-    <link rel="preload" href="../../assets/logos/wtf-logo.png" as="image">
+    <link rel="preload" href="../../assets/watermark/watchthefall_watermark.png" as="image">
     <link rel="preload" href="../../assets/logos/france-wtf-logo.png.webp" as="image">
     
     <!-- DNS prefetch for external resources -->
@@ -67,7 +67,7 @@
             <div class="breadcrumb">
                 <a href="../../feed.html">Directory</a> / <span>France</span>
             </div>
-            <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
+            <img src="../../assets/watermark/watchthefall_watermark.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title france-title">
                 <span class="region-logo-block">
                     <img src="../../assets/logos/france-wtf-logo.png.webp" alt="France" class="region-flag-logo" loading="eager" />
