Replace main homepage logos with watermark in nav and hero

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <nav class="main-nav">
         <div class="nav-container">
             <a href="index.html" class="nav-logo">
-                <img src="assets/logos/wtf-logo.png" alt="WatchTheFall">
+                <img src="assets/watermark/watchthefall_watermark.png" alt="WatchTheFall">
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -61,7 +61,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1 class="hero-title">
-                <img src="assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-logo" />
+                <img src="assets/watermark/watchthefall_watermark.png" alt="WatchTheFall" class="hero-logo" />
             </h1>
             <p class="hero-tagline">A network documenting the collapse of civilization through the lens of social media analytics.</p>
             <div class="hero-cta">
