Add Philosophy dropdown menu with Roadmap option in navigation

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
                 <li><a href="wtfcreations.html">Shop</a></li>
                 <li><a href="#directory">Directory</a></li>
                 <li><a href="wtfrecords.html">WTF Records</a></li>
-                <li><a href="philosophy.html">Philosophy</a></li>
+                <li class="nav-dropdown">
+                    <a href="philosophy.html">Philosophy</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="philosophy.html">Philosophy</a></li>
+                        <li><a href="regional/pages/roadmap.html">Roadmap</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </nav>
