Fix philosophy page navigation to match homepage with all links and dropdown

--- a/philosophy.html
+++ b/philosophy.html
@@ -14,13 +14,22 @@
     <nav class="main-nav">
         <div class="nav-container">
             <a href="index.html" class="nav-logo">
-                <img src="assets/logos/wtf-logo.png" alt="WatchTheFall">
+                <img src="assets/watermark/watchthefall_watermark.png" alt="WatchTheFall">
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="donate.html">Support</a></li>
+                <li><a href="index.html#worldcup">World Cup</a></li>
                 <li><a href="wtfcreations.html">Shop</a></li>
+                <li><a href="index.html#directory">Directory</a></li>
                 <li><a href="wtfrecords.html">WTF Records</a></li>
-                <li><a href="philosophy.html" class="active">Philosophy</a></li>
+                <li class="nav-dropdown">
+                    <a href="philosophy.html" class="active">Philosophy</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="philosophy.html">Philosophy</a></li>
+                        <li><a href="regional/pages/roadmap.html">Roadmap</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </nav>
